Change button text from 'Xem lại bài làm' to 'Quay lại'

--- a/app/index.html
+++ b/app/index.html
@@ -1033,7 +1033,7 @@
                 <div id="resultsDetailsContainer"></div>
             </div>
 
-            <button id="reviewBtn" class="btn-primary">Xem lại bài làm</button>
+            <button id="reviewBtn" class="btn-primary">Quay lại</button>
         </div>
     </div>
 
