Update GitHub links in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -949,7 +949,7 @@
             <h1>404</h1>
             <h2>Không tìm thấy bài ôn tập</h2>
             <p>URL YAML không hợp lệ hoặc không thể truy cập.</p>
-            <a href="https://github.com/nguyenhuuhoa-proton/quizly" class="btn-primary">
+            <a href="https://github.com/maple-zip/quizly" class="btn-primary">
                 ← Quay về dự án Quizly
             </a>
         </div>
@@ -962,7 +962,7 @@
             <h2>Hết thời gian làm bài</h2>
             <p>Bài ôn tập này đã đóng.</p>
             <p id="timeExpiredInfo"></p>
-            <a href="https://github.com/nguyenhuuhoa-proton/quizly" class="btn-primary">
+            <a href="https://github.com/maple-zip/quizly" class="btn-primary">
                 ← Quay về dự án Quizly
             </a>
         </div>
@@ -970,7 +970,7 @@
 
     <!-- Exam Info Screen -->
     <div id="examInfoScreen" class="exam-info-screen hidden">
-        <a href="https://github.com/nguyenhuuhoa-proton/quizly" class="quizly-logo" target="_blank">
+        <a href="https://github.com/maple-zip/quizly" class="quizly-logo" target="_blank">
             <svg width="120" height="40" viewBox="0 0 120 40" xmlns="http://www.w3.org/2000/svg">
                 <rect width="120" height="40" rx="8" fill="white" opacity="0.95"/>
                 <text x="60" y="26" font-family="Arial, sans-serif" font-size="20" font-weight="700" text-anchor="middle" fill="#28cc9e">Quizly</text>
